--- a/about.html
+++ b/about.html
@@ -93,15 +93,15 @@ Author URL: http://w3layouts.com
         <div class="abouthyn-inn text-center">
           <h6 class="sub-titlehny">Get To Know Us</h6>
           <h3 class="hny-title">About Zoe Index Fund</h3>
-          <p class="ab-para">As much as cryptos are currencies that could be used for our daily transactions they are also assets so one can acquire them and hold them in hopes they would appreciate in value with time. Not so many people are trained and educated to to properly assess the crypto market and invest in the assets that has a good tendencies to increase with time.
+          <p class="ab-para">As much as cryptos are currencies that could be used for our daily transactions they are also assets so one can acquire them and hold them in hopes they would appreciate with time. Not so many people are trained and educated to properly assess the crypto market and invest in the assets that have a good tendency to increase with time.
               <br><br>
-              To solve this problem we are creating Zoe Index, the first index fund for crypto, An index fund is a portfolio of various crypto assets. instead of an individual purchasing one crypto and his entire portfoilio is dependent on the success of that one portfoilio, purchasing this token automatically invokes a smart contract that purchases all the cypto assets related to its index, by so doing you get the oppotunity to diversify your portfoilio. With this your portfoilio isn't dependent on one crypto asset but various crypto assets.
+             To solve this problem we are creating Zoe Index, the first index fund for crypto, An index fund is a portfolio of various crypto assets. instead of an individual purchasing one crypto and his entire portfolio is dependent on the success of that one portfolio, purchasing this token automatically invokes a smart contract that purchases all the crypto assets related to its index, by so doing you get the opportunity to diversify your portfolio. With this, your portfolio isn't dependent on one crypto asset but various crypto assets.
               <br><br>
 
           </p>
 
           <div class="buttons mt-5">
-            <a href="services.html" class="btn btn-style btn-primary">Read More</a>
+            <a href="#" class="btn btn-style btn-primary">Read More</a>
 
           </div>
         </div>
@@ -203,19 +203,19 @@ Author URL: http://w3layouts.com
                   <input type="checkbox" checked>
                   <i></i>
                   <h4>How Secure Are My Funds</h4>
-                  <p>Building on the blockchain technology security should be the least of your worries because the technology has been vetted by professional to be almost invulnerable and currently the best in the world</p>
+                  <p>Building on blockchain technology security should be the least of your worries because the technology has been vetted by professionals to be almost invulnerable and currently the best in the worl.</p>
                 </li>
                 <li>
                   <input type="checkbox" checked>
                   <i></i>
                   <h4>How Does Zoe Index Work?</h4>
-                  <p>When you purchase our tokens a you firstly get the amout of tokens you paid for then a smart contract is being invoked using the funds you deposited that automatically purchases all the crypto assets associated with our index.</p>
+                  <p>When you purchase our tokens you firstly get the number of tokens you paid for then a smart contract is being invoked using the funds you deposited that automatically purchases all the crypto assets associated with our index.</p>
                 </li>
                 <li>
                   <input type="checkbox" checked>
                   <i></i>
                   <h4>Do  I Have All The Assets The Smart Contract Acquires?</h4>
-                  <p>Yes, you have the value for all of the crypto assets acquired but not the crypto assets themselves so you can't spend just one of them, rather you are given a Zoe Index Token representing the value of your portfolio. </p>
+                  <p>Yes, you have the value for all of the crypto assets acquired but not the crypto-assets themselves so you can't spend just one of them, rather you are given a Zoe Index Token representing the value of your portfolio. </p>
                 </li>
                 <li>
                   <input type="checkbox" checked>
@@ -226,8 +226,8 @@ Author URL: http://w3layouts.com
                 <li>
                   <input type="checkbox" checked>
                   <i></i>
-                  <h4>WHat Are The Crypto Assets Associated With This Index</h4>
-                  <p>Our team is working hard to access the crypto market and make a composition of top 50 crypto asstes and this information would be available soon</p>
+                  <h4>What Are The Crypto Assets Associated With This Index</h4>
+                  <p>Our team is working hard to access the crypto market and make a composition of top 50 crypto assets and this information would be available soon.</p>
                 </li>
                 <!-- <li>
                   <input type="checkbox" checked>
@@ -277,9 +277,9 @@ Author URL: http://w3layouts.com
             </div>
             <div class="col-lg-5 col-md-5 column pl-md-5 mt-md-0 mt-5">
               <h3>Latest News</h3>
-              <a class="d-grid twitter-feed" href="services.html">
+              <a class="d-grid twitter-feed" href="#">
                 <img src="assets/images/hackathon.png" class="img-fluid" alt="">
-                <p class="twitter-title">We participatrd in the hackathon presented by Quabators<br>
+                <p class="twitter-title">We are participating in the hackathon presented by Quabators<br>
 
                   <label class="small"><span class="fa fa-clock-o"></span> Aug 5 - 7, 2021</label>
                 </p>
