--- a/purchase.html
+++ b/purchase.html
@@ -300,9 +300,9 @@ Author URL: http://w3layouts.com
             </div>
             <div class="col-lg-5 col-md-5 column pl-md-5 mt-md-0 mt-5">
               <h3>Latest News</h3>
-              <a class="d-grid twitter-feed" href="services.html">
+              <a class="d-grid twitter-feed" href="#">
                 <img src="assets/images/hackathon.png" class="img-fluid" alt="">
-                <p class="twitter-title">We participatrd in the hackathon presented by Quabators<br>
+                <p class="twitter-title">We are participating in the hackathon presented by Quabators<br>
 
                   <label class="small"><span class="fa fa-clock-o"></span> Aug 5 - 7, 2021</label>
                 </p>
