--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ Author URL: http://w3layouts.com
         <div class="col-lg-6 bottom-ab-left">
           <h6 class="sub-titlehny">The Problem</h6>
           <h3 class="hny-title">Finding The Right Assets To Buy.</h3>
-          <p class="my-3">As much as cryptos are currencies that could be used for our daily transactions they are also assets so one can acquire them and hold them in hopes they would appreciate in value with time. Not so many people are trained and educated to to properly assess the crypto market and invest in the assets that has a good tendencies to increase with time </p>
+          <p class="my-3">As much as cryptos are currencies that could be used for our daily transactions they are also assets so one can acquire them and hold them in hopes they would appreciate with time. Not so many people are trained and educated to properly assess the crypto market and invest in the assets that have a good tendency to increase with time.
+ </p>
           <!-- <a href="about.html" class="btn btn-style btn-primary mt-4">Read More</a> -->
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5 pl-lg-4">
@@ -145,7 +146,7 @@ Author URL: http://w3layouts.com
 
           <h6 class="sub-titlehny">Our Solution</h6>
           <h3 class="hny-title">Index Funds For Crypto.</h3>
-          <p class="my-3">To solve this problem we are creating Zoe Index, the first index fund for crypto, An index fund is a portfolio of various crypto assets. instead of an individual purchasing one crypto and his entire portfoilio is dependent on the success of that one portfoilio, purchasing this token automatically invokes a smart contract that purchases all the cypto assets related to its index, by so doing you get the oppotunity to diversify your portfoilio. With this your portfoilio isn't dependent on one crypto asset but various crypto assets.</p>
+          <p class="my-3">To solve this problem we are creating Zoe Index, the first index fund for crypto, An index fund is a portfolio of various crypto assets. instead of an individual purchasing one crypto and his entire portfolio is dependent on the success of that one portfolio, purchasing this token automatically invokes a smart contract that purchases all the crypto assets related to its index, by so doing you get the opportunity to diversify your portfolio. With this, your portfolio isn't dependent on one crypto asset but various crypto assets.</p>
           <!-- <a href="about.html" class="btn btn-style btn-primary mt-4">Read More</a> -->
         </div>
 
@@ -160,7 +161,7 @@ Author URL: http://w3layouts.com
       <div class="welcome-left py-md-5 py-3">
         <h6>Creativity Connected</h6>
         <h4>a safer way to invest in the crypto market</h4>
-        <p class="pr-lg-5">Never loose your money again to poor crypto investment, with our solution you can invest smartly. </p>
+        <p class="pr-lg-5">Never lose your money again to poor crypto investment, with our solution you can invest smartly.</p>
         <div class="buttons mt-5">
           <a href="about.html" class="btn btn-white btn-primary mr-2">Read More</a>
           <a href="purchase.html" class="btn btn-style border-btn ml-2">Purchase Tokens</a>
@@ -179,7 +180,7 @@ Author URL: http://w3layouts.com
         <div class="cwp4-text col-lg-6 mt-lg-0 mt-5">
           <h3 class="hny-title">
             Building on a secure and transparent technology</h3>
-          <p>We understand that there are a lot of hackers out there so we are building on a secure technology; The Blockchain. With this you dont have to worry about loosing your tokens to hackers because with blockchain everything is secured and we use smart contracts to execute our transactions meaning everything is fair and open.
+          <p>We understand that there are a lot of hackers out there so we are building on a secure technology; The Blockchain. With this, you won't have to worry about losing your tokens to hackers because with blockchain everything is secured and we use smart contracts to execute our transactions meaning everything is fair and open.
           </p>
           </ul>
         </div>
@@ -249,7 +250,7 @@ Author URL: http://w3layouts.com
                 <li>
                   <input type="checkbox" checked>
                   <i></i>
-                  <h4>WHat Are The Crypto Assets Associated With This Index</h4>
+                  <h4>What Are The Crypto Assets Associated With This Index</h4>
                   <p>Our team is working hard to access the crypto market and make a composition of top 50 crypto asstes and this information would be available soon</p>
                 </li>
                 <!-- <li>
@@ -300,9 +301,9 @@ Author URL: http://w3layouts.com
             </div>
             <div class="col-lg-5 col-md-5 column pl-md-5 mt-md-0 mt-5">
               <h3>Latest News</h3>
-              <a class="d-grid twitter-feed" href="services.html">
+              <a class="d-grid twitter-feed" href="#">
                 <img src="assets/images/hackathon.png" class="img-fluid" alt="">
-                <p class="twitter-title">We participatrd in the hackathon presented by Quabators<br>
+                <p class="twitter-title">We are participating in the hackathon presented by Quabators<br>
 
                   <label class="small"><span class="fa fa-clock-o"></span> Aug 5 - 7, 2021</label>
                 </p>
