--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@ Author URL: http://w3layouts.com
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link" href="#">Services</a>
               </li>
 
               <li class="nav-item">
@@ -277,7 +277,7 @@ Author URL: http://w3layouts.com
               <ul class="footer-gd-16">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
@@ -295,21 +295,21 @@ Author URL: http://w3layouts.com
             </div>
             <div class="col-lg-5 col-md-5 column pl-md-5 mt-md-0 mt-5">
               <h3>Latest News</h3>
-              <a class="d-grid twitter-feed" href="services.html">
+              <a class="d-grid twitter-feed" href="#">
                 <img src="assets/images/1.jpg" class="img-fluid" alt="">
                 <p class="twitter-title">Learn by doing with Real World Projects Lorem, ipsum.<br>
 
                   <label class="small"><span class="fa fa-clock-o"></span> Aug 02, 2020</label>
                 </p>
               </a>
-              <a class="d-grid twitter-feed" href="services.html">
+              <a class="d-grid twitter-feed" href="#">
                 <img src="assets/images/5.jpg" class="img-fluid" alt="">
                 <p class="twitter-title">Using Creative Problem Solving Lorem ipsum dolor sit.<br>
 
                   <label class="small"><span class="fa fa-clock-o"></span> Sep 21, 2020</label>
                 </p>
               </a>
-              <a class="d-grid twitter-feed" href="services.html">
+              <a class="d-grid twitter-feed" href="#">
                 <img src="assets/images/3.jpg" class="img-fluid" alt="">
                 <p class="twitter-title">Learn by doing with Real World Projects Lorem, ipsum.<br>
 
