--- a/purchase.html
+++ b/purchase.html
@@ -1,26 +1,25 @@
-
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Zoe Index Fund</title>
-  <link
-    href="//fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600&display=swap"
-    rel="stylesheet">
-  <!-- Template CSS -->
-  <link rel="stylesheet" href="assets/css/style-starter.css">
-</head>
-
-<body>
-  <!--header-->
-  <section class="w3l-header">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<title>Zoe Index Fund | Home</title>
+		<link
+			href="//fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600&display=swap"
+			rel="stylesheet"
+		/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<!-- Template CSS -->
+		<link rel="stylesheet" href="assets/css/style-starter.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
+	</head>
+	<body>
+        <section class="w3l-header">
     <header id="site-header" class="fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark stroke">
@@ -41,7 +40,7 @@ Author URL: http://w3layouts.com
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <li class="nav-item ">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
@@ -50,7 +49,7 @@ Author URL: http://w3layouts.com
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link free-con" href="purchase.html">Purchase Tokens</a>
               </li>
             </ul>
@@ -75,204 +74,18 @@ Author URL: http://w3layouts.com
     </header>
     <!--/header-->
   </section>
-  <!-- main-slider -->
-  <section class="w3l-main-slider" id="home">
-    <div class="companies20-content">
-      <div class="owl-one owl-carousel owl-theme">
-        <div class="item">
-          <li>
-            <div class="slider-info banner-view bg bg2">
-              <div class="banner-info">
-                <div class="container">
-                  <div class="banner-info-bg">
-                    <p>Zoe Index</p>
-                    <h5>The First Crypto Index Fund</h5>
-                    <a class="btn btn-style btn-white mt-sm-5 mt-4 mr-2" href="#about"> Read More</a>
-                    <a class="btn btn-style border-btn mt-sm-5 mt-4" href="purchase.html"> Purchase Tokens</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-        </div>
-        <div class="item">
-          <li>
-            <div class="slider-info  banner-view banner-top1 bg bg2">
-              <div class="banner-info">
-                <div class="container">
-                  <div class="banner-info-bg">
-                    <p>Zoe Index</p>
-                    <h5>Solving your Complex Crypto Needs</h5>
-                    <a class="btn btn-style btn-white mt-sm-5 mt-4 mr-2" href="#about"> Read More</a>
-                    <a class="btn btn-style border-btn mt-sm-5 mt-4" href="purchase.html">  Purchase Tokens</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- /main-slider -->
-  <!--/grids-->
-  <section class="w3l-grids-3 py-5" id="about">
-    <div class="container py-md-5 py-3">
-      <div class="row bottom-ab-grids align-items-center">
+		<article>
+			<div class="content">
+				<!-- <h1>Zoe Index Token</h1> -->
+				<h2>COMING SOON</h2>
+                <p>We are working hard and are almost done with our smart contract. Our token sale would commence in : </p>
+                <br>
+                <br>
+				<div class="countdown">00 : 00 : 00 : 00</div>
+			</div>
+		</article>
 
-        <div class="col-lg-6 bottom-ab-left">
-          <h6 class="sub-titlehny">The Problem</h6>
-          <h3 class="hny-title">Finding The Right Assets To Buy.</h3>
-          <p class="my-3">As much as cryptos are currencies that could be used for our daily transactions they are also assets so one can acquire them and hold them in hopes they would appreciate in value with time. Not so many people are trained and educated to to properly assess the crypto market and invest in the assets that has a good tendencies to increase with time </p>
-          <!-- <a href="about.html" class="btn btn-style btn-primary mt-4">Read More</a> -->
-        </div>
-        <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5 pl-lg-4">
-          <img src="assets/images/2.jpg" alt="" class="img-fluid">
-        </div>
-
-      </div>
-    </div>
-
-    <div class="container py-md-5 py-3">
-      <div class="row bottom-ab-grids align-items-center">
-
-        
-        <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5 pl-lg-4">
-          <img src="assets/images/2.jpg" alt="" class="img-fluid">
-        </div>
-        <div class="col-lg-6 bottom-ab-left">
-<br>
-
-          <h6 class="sub-titlehny">Our Solution</h6>
-          <h3 class="hny-title">Index Funds For Crypto.</h3>
-          <p class="my-3">To solve this problem we are creating Zoe Index, the first index fund for crypto, An index fund is a portfolio of various crypto assets. instead of an individual purchasing one crypto and his entire portfoilio is dependent on the success of that one portfoilio, purchasing this token automatically invokes a smart contract that purchases all the cypto assets related to its index, by so doing you get the oppotunity to diversify your portfoilio. With this your portfoilio isn't dependent on one crypto asset but various crypto assets.</p>
-          <!-- <a href="about.html" class="btn btn-style btn-primary mt-4">Read More</a> -->
-        </div>
-
-      </div>
-    </div>
-  </section>
-  <!--//grids-->
-  
-  <!-- middle -->
-  <div class="w3l-middle py-5">
-    <div class="container py-xl-5 py-lg-3">
-      <div class="welcome-left py-md-5 py-3">
-        <h6>Creativity Connected</h6>
-        <h4>a safer way to invest in the crypto market</h4>
-        <p class="pr-lg-5">Never loose your money again to poor crypto investment, with our solution you can invest smartly. </p>
-        <div class="buttons mt-5">
-          <a href="about.html" class="btn btn-white btn-primary mr-2">Read More</a>
-          <a href="purchase.html" class="btn btn-style border-btn ml-2">Purchase Tokens</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- //middle -->
-  <!--/w3l-cwp4-->
-  <div class="w3l-cwp4-sec py-5">
-    <div class="container py-md-5 py-3">
-      <div class="cwp4-two row align-items-center">
-        <div class="cwp4-image col-lg-6 pr-lg-5">
-          <img src="assets/images/6.jpg" class="img-fluid" alt="">
-        </div>
-        <div class="cwp4-text col-lg-6 mt-lg-0 mt-5">
-          <h3 class="hny-title">
-            Building on a secure and transparent technology</h3>
-          <p>We understand that there are a lot of hackers out there so we are building on a secure technology; The Blockchain. With this you dont have to worry about loosing your tokens to hackers because with blockchain everything is secured and we use smart contracts to execute our transactions meaning everything is fair and open.
-          </p>
-          </ul>
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-  <!--//w3l-grids-->
-    <!-- middle -->
-  <div class="w3l-middle py-5">
-    <div class="container py-xl-5 py-lg-3">
-        <div class="forms-25-info text-center mx-lg-auto">
-          <div class="title-content">
-             <h6 class="sub-titlehny">Newsletter</h6>
-            <h3 class="hny-title two">Subscribe to get the latest
-              <br>news and updates.</h3>
-          </div>
-          <form action="#" method="post" class="signin-form mt-4 mb-2">
-            <div class="forms-gds">
-              <input type="text" name="" placeholder="Name" required />
-              <input type="email" name="" placeholder="Email" required />
-              <button class="btn btn-style btn-primary">Subscribe</button>
-            </div>
-          </form>
-        </div>
-    </div>
-  </div>
-  <!-- //middle -->
-
-    <!--/w3l-faq-block-->
-  <div class="w3l-faq-block py-5" id="faq">
-    <div class="container py-lg-4">
-        <div class="faq-grids mt-lg-0 mt-5 pl-lg-5">
-          <h6 class="sub-titlehny">FaQs</h6>
-          <h3 class="hny-title">
-            Frequently asked questions about Zoe Index
- </h3>
-          <p class="my-3"> </p>
-          <section class="w3l-faq mt-5" id="faq">
-            <div class="faq-page">
-              <ul>
-                <li>
-                  <input type="checkbox" checked>
-                  <i></i>
-                  <h4>How Secure Are My Funds</h4>
-                  <p>Building on the blockchain technology security should be the least of your worries because the technology has been vetted by professional to be almost invulnerable and currently the best in the world</p>
-                </li>
-                <li>
-                  <input type="checkbox" checked>
-                  <i></i>
-                  <h4>How Does Zoe Index Work?</h4>
-                  <p>When you purchase our tokens a you firstly get the amout of tokens you paid for then a smart contract is being invoked using the funds you deposited that automatically purchases all the crypto assets associated with our index.</p>
-                </li>
-                <li>
-                  <input type="checkbox" checked>
-                  <i></i>
-                  <h4>Do  I Have All The Assets The Smart Contract Acquires?</h4>
-                  <p>Yes, you have the value for all of the crypto assets acquired but not the crypto assets themselves so you can't spend just one of them, rather you are given a Zoe Index Token representing the value of your portfolio. </p>
-                </li>
-                <li>
-                  <input type="checkbox" checked>
-                  <i></i>
-                  <h4>What Is An Index Fund?</h4>
-                  <p>An index fund is a portfolio of stocks or bonds designed to mimic the composition and performance of a financial market index, Index funds seek to match the risk and return of the market, on the theory that in the long-term, the market will outperform any single investment.</p>
-                </li>
-                <li>
-                  <input type="checkbox" checked>
-                  <i></i>
-                  <h4>WHat Are The Crypto Assets Associated With This Index</h4>
-                  <p>Our team is working hard to access the crypto market and make a composition of top 50 crypto asstes and this information would be available soon</p>
-                </li>
-                <!-- <li>
-                  <input type="checkbox" checked>
-                  <i></i>
-                  <h4>Internet of Things</h4>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
-                    laboriosam nihil debitis facere voluptatibus consectetur quae quasi fuga, ad corrupti libero omnis
-                    sapiente
-                    non assumenda excepturi aperiam iste minima autem.</p>
-                </li> -->
-              </ul>
-            </div>
-          </section>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <!--//w3l-faq-block-->
-
-  <!--//w3l-footer-29-main-->
-  <footer>
+        <footer>
     <!-- footer -->
     <section class="w3l-footer">
       <div class="w3l-footer-16-main py-5">
@@ -365,131 +178,9 @@ Author URL: http://w3layouts.com
     </section>
     <!-- //footer -->
   </footer>
-
-  <!-- Template JavaScript -->
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-
-  <!-- script for testimonials -->
-  <script>
-    $(document).ready(function () {
-      $('.owl-testimonial').owlCarousel({
-        loop: true,
-        margin: 0,
-        nav: true,
-        responsiveClass: true,
-        autoplay: true,
-        autoplayTimeout: 5000,
-        autoplaySpeed: 1000,
-        autoplayHoverPause: false,
-        responsive: {
-          0: {
-            items: 1,
-            nav: false
-          },
-          480: {
-            items: 1,
-            nav: false
-          },
-          667: {
-            items: 1,
-            nav: true
-          },
-          1000: {
-            items: 1,
-            nav: true
-          }
-        }
-      })
-    })
-  </script>
-  <!-- //script for testimonials -->
-
-  <script src="assets/js/theme-change.js"></script>
-
-  <!-- js for portfolio lightbox -->
-  <!-- libhtbox -->
-  <script src="assets/js/lightbox-plus-jquery.min.js"></script>
-  <!-- libhtbox -->
-  <script src="assets/js/owl.carousel.js"></script>
-  <!-- script for banner slider-->
-  <script>
-    $(document).ready(function () {
-      $('.owl-one').owlCarousel({
-        loop: true,
-        margin: 0,
-        nav: false,
-        responsiveClass: true,
-        autoplay: true,
-        autoplayTimeout: 5000,
-        autoplaySpeed: 1000,
-        autoplayHoverPause: false,
-        responsive: {
-          0: {
-            items: 1,
-            nav: false
-          },
-          480: {
-            items: 1,
-            nav: false
-          },
-          667: {
-            items: 1,
-            nav: true
-          },
-          1000: {
-            items: 1,
-            nav: true
-          }
-        }
-      })
-    })
-  </script>
-  <!-- //script -->
-  <script>
-    $(document).ready(function () {
-      $('.owl-news').owlCarousel({
-        stagePadding: 200,
-        loop: true,
-        margin: 30,
-        nav: true,
-        responsiveClass: true,
-        autoplay: true,
-        autoplayTimeout: 5000,
-        autoplaySpeed: 1000,
-        autoplayHoverPause: false,
-        responsive: {
-          0: {
-            items: 1,
-            stagePadding:40,
-            nav: false
-          },
-          480: {
-            items: 1,
-            stagePadding:40,
-            nav: true
-          },
-          667: {
-            items: 2,
-            stagePadding: 50,
-            nav: true
-          },
-          1000: {
-            items: 2,
-            nav: true
-          }
-        }
-      })
-    })
-  </script>
-  <!-- stats number counter-->
-  <script src="assets/js/jquery.waypoints.min.js"></script>
-  <script src="assets/js/jquery.countup.js"></script>
-  <script>
-    $('.counter').countUp();
-  </script>
-  <!-- //stats number counter -->
-  <!--/MENU-JS-->
-  <script>
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+		<script src="/assets/js/coming.js"></script>
+        <script>
     $(window).on("scroll", function () {
       var scroll = $(window).scrollTop();
 
@@ -516,8 +207,5 @@ Author URL: http://w3layouts.com
     });
   </script>
   <!--//MENU-JS-->
-
-  <script src="assets/js/bootstrap.min.js"></script>
-
-</body>
+	</body>
 </html>
