--- a/purchase.html
+++ b/purchase.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<title>Zoe Index Fund | Home</title>
+		<title>Zoe Index Fund | Purchase Tokens</title>
 		<link
 			href="//fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600&display=swap"
 			rel="stylesheet"
